--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "https://HectorAlfons0.github.io/ToDoAppReactV2"
+  "homepage": "https://hectoralfons0.github.io/ToDoAppReactV2"
 }
